# totp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.jsx  input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  password_encryption.rs
src/components/: EcholessInput.jsx  Modal.jsx  OTPEntry.jsx  SearchBar.jsx  TextInput.jsx
src/pages/: AddOTP.jsx  Home.jsx  OTPMenu.jsx  PasswordStartup.jsx  Settings.jsx
