[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-read-text", "clipboard-write-text", "window-minimize", "window-show", "window-maximize", "window-unminimize", "window-hide", "window-unmaximize", "window-close", "window-start-dragging", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base32 = "0.4.0"
hmac-sha1 = "0.2.2"
chrono = { version = "0.4.38", features = [] }
dirs = "5.0.1"
lazy_static = "1.4.0"
url = { version = "2.5.0", features = [] }
urlencoding = "2.1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
